refactor: ♻️ corrigir acesso ao primeiro salário na verificação do teste `getByUser`